# hls-cabal-monorepo-multihome-recomp-repro

./: README.md  cabal.project
package-a/: LICENSE  package-a.cabal
package-a/src/: MyLibA.hs
package-b/: package-b.cabal
package-b/src/: MyLibB.hs
